--- a/app/assets/css/certificate.css
+++ b/app/assets/css/certificate.css
@@ -6,10 +6,11 @@ img {
     width: 1000px;
     font-family: arial;
     position: absolute;
-    top: 300px;
+    top: 355px;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
     font-weight: bold;
+    color: #414141;
 }
 
 .hidden {
