--- a/app/assets/css/home.css
+++ b/app/assets/css/home.css
@@ -5,7 +5,7 @@ html {
 }
 body {
     width: 100%;
-    background-image: url('/assets/img/background.png');
+    background-image: linear-gradient(45deg,rgba(0,150,136,.25),rgba(139,195,74,.15),rgba(63,81,181,.35));
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -26,11 +26,12 @@ body {
     margin: 0 auto;
     box-sizing: border-box;
     max-width: 80%;
+    width: 400px;
 }
 
 .center {
     display: block;
-    font-family: arial;
+    font-family: 'Droid Sans', sans-serif;;
     color: white;
     text-decoration: none;
     padding: 10px;
@@ -40,12 +41,12 @@ body {
 }
 
 .gen-button {
-    border: 3px solid white;
-    font-size: 20px;
+    border: none;
+    font-size: 15px;
     margin-top: 20px;
-    border-radius: 5px;
+    border-radius: 0px;
     text-transform: uppercase;
-    background-color: Transparent;
+    background-color: #3c9835;
     cursor: pointer;
 }
 
@@ -74,10 +75,10 @@ a {
 }
 
 input {
-    border: 3px solid white;
+    border: 2px solid #3c9835;
     font-size: 20px;
     padding: 10px;
-    border-radius: 5px;
+    border-radius: 0px;
     color: #333 !important;
 }
 
@@ -85,6 +86,7 @@ input {
     font-size: 17px;
     margin-top: 30px;
     padding: 5px;
+    color: #3c9835;
 }
 
 .error {
